@@ -22,14 +22,17 @@ import bio.terra.service.auth.iam.exception.IamForbiddenException;
 import bio.terra.service.auth.iam.exception.IamInternalServerErrorException;
 import bio.terra.service.auth.iam.exception.IamNotFoundException;
 import bio.terra.service.auth.iam.exception.IamUnauthorizedException;
+import bio.terra.service.common.gcs.GcsUriUtils;
 import bio.terra.service.configuration.ConfigurationService;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.google.api.client.http.HttpStatusCodes;
+import com.google.cloud.storage.BlobId;
 import com.google.common.annotations.VisibleForTesting;
+import java.math.BigDecimal;
+import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -45,13 +48,15 @@ import org.broadinstitute.dsde.workbench.client.sam.ApiException;
 import org.broadinstitute.dsde.workbench.client.sam.api.ResourcesApi;
 import org.broadinstitute.dsde.workbench.client.sam.api.StatusApi;
 import org.broadinstitute.dsde.workbench.client.sam.api.UsersApi;
+import org.broadinstitute.dsde.workbench.client.sam.model.AccessPolicyMembershipRequest;
 import org.broadinstitute.dsde.workbench.client.sam.model.AccessPolicyMembershipV2;
 import org.broadinstitute.dsde.workbench.client.sam.model.AccessPolicyResponseEntryV2;
 import org.broadinstitute.dsde.workbench.client.sam.model.CreateResourceRequestV2;
 import org.broadinstitute.dsde.workbench.client.sam.model.ErrorReport;
 import org.broadinstitute.dsde.workbench.client.sam.model.RolesAndActions;
+import org.broadinstitute.dsde.workbench.client.sam.model.SignedUrlRequest;
+import org.broadinstitute.dsde.workbench.client.sam.model.SyncReportEntry;
 import org.broadinstitute.dsde.workbench.client.sam.model.SystemStatus;
-import org.broadinstitute.dsde.workbench.client.sam.model.UserStatus;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -65,9 +70,6 @@ public class SamIam implements IamProviderInterface {
   private final SamConfiguration samConfig;
   private final ConfigurationService configurationService;
   private final SamApiService samApiService;
-
-  // This value is the same for all environments which is why this is hardcoded instead of config
-  static final String TOS_URL = "app.terra.bio/#terms-of-service";
 
   @Autowired
   public SamIam(
@@ -215,22 +217,22 @@ public class SamIam implements IamProviderInterface {
 
     req.putPoliciesItem(
         IamRole.ADMIN.toString(),
-        createAccessPolicyOneV2(IamRole.ADMIN, samConfig.getAdminsGroupEmail()));
+        createAccessPolicyOne(IamRole.ADMIN, samConfig.adminsGroupEmail()));
 
     List<String> stewards = new ArrayList<>();
     stewards.add(userStatusInfo.getUserEmail());
     stewards.addAll(ListUtils.emptyIfNull(policies.getStewards()));
-    req.putPoliciesItem(
-        IamRole.STEWARD.toString(), createAccessPolicyV2(IamRole.STEWARD, stewards));
+    req.putPoliciesItem(IamRole.STEWARD.toString(), createAccessPolicy(IamRole.STEWARD, stewards));
 
     req.putPoliciesItem(
         IamRole.CUSTODIAN.toString(),
-        createAccessPolicyV2(IamRole.CUSTODIAN, policies.getCustodians()));
+        createAccessPolicy(IamRole.CUSTODIAN, policies.getCustodians()));
 
     req.putPoliciesItem(
         IamRole.SNAPSHOT_CREATOR.toString(),
-        createAccessPolicyV2(IamRole.SNAPSHOT_CREATOR, policies.getSnapshotCreators()));
+        createAccessPolicy(IamRole.SNAPSHOT_CREATOR, policies.getSnapshotCreators()));
 
+    req.authDomain(List.of());
     logger.debug("SAM request: " + req);
     return req;
   }
@@ -282,21 +284,21 @@ public class SamIam implements IamProviderInterface {
 
     req.putPoliciesItem(
         IamRole.ADMIN.toString(),
-        createAccessPolicyOneV2(IamRole.ADMIN, samConfig.getAdminsGroupEmail()));
+        createAccessPolicyOne(IamRole.ADMIN, samConfig.adminsGroupEmail()));
 
     List<String> stewards = new ArrayList<>();
     stewards.add(userStatusInfo.getUserEmail());
     stewards.addAll(ListUtils.emptyIfNull(policies.getStewards()));
-    req.putPoliciesItem(
-        IamRole.STEWARD.toString(), createAccessPolicyV2(IamRole.STEWARD, stewards));
+    req.putPoliciesItem(IamRole.STEWARD.toString(), createAccessPolicy(IamRole.STEWARD, stewards));
 
     req.putPoliciesItem(
-        IamRole.READER.toString(), createAccessPolicyV2(IamRole.READER, policies.getReaders()));
+        IamRole.READER.toString(), createAccessPolicy(IamRole.READER, policies.getReaders()));
 
     req.putPoliciesItem(
         IamRole.DISCOVERER.toString(),
-        createAccessPolicyV2(IamRole.DISCOVERER, policies.getDiscoverers()));
+        createAccessPolicy(IamRole.DISCOVERER, policies.getDiscoverers()));
 
+    req.authDomain(List.of());
     logger.debug("SAM request: " + req);
     return req;
   }
@@ -315,10 +317,10 @@ public class SamIam implements IamProviderInterface {
   private String syncOnePolicy(
       AuthenticatedUserRequest userReq, IamResourceType resourceType, UUID id, IamRole role)
       throws ApiException {
-    Map<String, List<Object>> results =
+    Map<String, List<SyncReportEntry>> results =
         samApiService
             .googleApi(userReq.getToken())
-            .syncPolicy(resourceType.toString(), id.toString(), role.toString());
+            .syncPolicy(resourceType.toString(), id.toString(), role.toString(), null);
     String policyEmail = getPolicyGroupEmailFromResponse(results);
     logger.debug(
         "Policy Group Resource: {} Role: {} Email:  {} ",
@@ -341,11 +343,12 @@ public class SamIam implements IamProviderInterface {
     req.setResourceId(profileId);
     req.putPoliciesItem(
         IamRole.ADMIN.toString(),
-        createAccessPolicyOneV2(IamRole.ADMIN, samConfig.getAdminsGroupEmail()));
+        createAccessPolicyOne(IamRole.ADMIN, samConfig.adminsGroupEmail()));
     req.putPoliciesItem(
         IamRole.OWNER.toString(),
-        createAccessPolicyOneV2(IamRole.OWNER, userStatusInfo.getUserEmail()));
-    req.putPoliciesItem(IamRole.USER.toString(), createAccessPolicyV2(IamRole.USER, null));
+        createAccessPolicyOne(IamRole.OWNER, userStatusInfo.getUserEmail()));
+    req.putPoliciesItem(IamRole.USER.toString(), createAccessPolicy(IamRole.USER, null));
+    req.authDomain(List.of());
 
     ResourcesApi samResourceApi = samApiService.resourcesApi(userReq.getToken());
     logger.debug("SAM request: " + req);
@@ -398,7 +401,9 @@ public class SamIam implements IamProviderInterface {
                       .name(entry.getPolicyName())
                       .members(entry.getPolicy().getMemberEmails())
                       .memberPolicies(
-                          entry.getPolicy().getMemberPolicies().stream()
+                          Optional.ofNullable(entry.getPolicy().getMemberPolicies())
+                              .orElseGet(List::of)
+                              .stream()
                               .map(
                                   pid ->
                                       new ResourcePolicyModel()
@@ -465,7 +470,7 @@ public class SamIam implements IamProviderInterface {
         policyName,
         userEmail);
     samResourceApi.addUserToPolicyV2(
-        iamResourceType.toString(), resourceId.toString(), policyName, userEmail);
+        iamResourceType.toString(), resourceId.toString(), policyName, userEmail, null);
   }
 
   @Override
@@ -554,29 +559,25 @@ public class SamIam implements IamProviderInterface {
   }
 
   @Override
-  public UserStatus registerUser(String accessToken) throws InterruptedException {
+  public void registerUser(String accessToken) throws InterruptedException {
     logger.info("Registering the ingest service account into Terra");
     SamRetry.retry(
         configurationService,
         () -> {
           try {
             logger.info("Running the registration process");
-            samApiService.usersApi(accessToken).createUserV2();
+            return samApiService.usersApi(accessToken).createUserV2(null);
           } catch (ApiException e) {
             // This conflict could happen if the request timed out originally.
             // In that case, it's ok to assume that this is a success and move on
             if (e.getCode() == 409) {
               logger.warn("User already exists - skipping", e);
+              return null;
             } else {
               throw e;
             }
           }
         });
-
-    logger.info("Accepting terms of service for the ingest service account in Terra");
-    return SamRetry.retry(
-        configurationService,
-        () -> samApiService.termsOfServiceApi(accessToken).acceptTermsOfService(TOS_URL));
   }
 
   @Override
@@ -586,7 +587,7 @@ public class SamIam implements IamProviderInterface {
   }
 
   private void createGroupInner(String accessToken, String groupName) throws ApiException {
-    samApiService.groupApi(accessToken).postGroup(groupName);
+    samApiService.groupApi(accessToken).postGroup(groupName, null);
   }
 
   private String getGroupEmail(String accessToken, String groupName) throws ApiException {
@@ -630,6 +631,27 @@ public class SamIam implements IamProviderInterface {
     return samApiService.googleApi(userReq.getToken()).getArbitraryPetServiceAccountToken(scopes);
   }
 
+  @Override
+  public String signUrlForBlob(
+      AuthenticatedUserRequest userReq, String project, String path, Duration duration)
+      throws InterruptedException {
+    return SamRetry.retry(
+        configurationService, () -> signUrlForBlobInner(userReq, project, path, duration));
+  }
+
+  private String signUrlForBlobInner(
+      AuthenticatedUserRequest userReq, String project, String path, Duration duration)
+      throws ApiException {
+    BlobId blobId = GcsUriUtils.parseBlobUri(path);
+    SignedUrlRequest request =
+        new SignedUrlRequest()
+            .bucketName(blobId.getBucket())
+            .blobName(blobId.getName())
+            .duration(BigDecimal.valueOf(duration.toMinutes()))
+            .requesterPays(true);
+    return samApiService.googleApi(userReq.getToken()).getSignedUrlForBlob(project, request);
+  }
+
   private UserStatusInfo getUserInfoAndVerify(AuthenticatedUserRequest userReq) {
     UserStatusInfo userStatusInfo = getUserInfo(userReq);
     if (!userStatusInfo.isEnabled()) {
@@ -639,13 +661,13 @@ public class SamIam implements IamProviderInterface {
     return userStatusInfo;
   }
 
-  AccessPolicyMembershipV2 createAccessPolicyOneV2(IamRole role, String email) {
-    return createAccessPolicyV2(role, Collections.singletonList(email));
+  AccessPolicyMembershipRequest createAccessPolicyOne(IamRole role, String email) {
+    return createAccessPolicy(role, List.of(email));
   }
 
-  AccessPolicyMembershipV2 createAccessPolicyV2(IamRole role, List<String> emails) {
-    AccessPolicyMembershipV2 membership =
-        new AccessPolicyMembershipV2().roles(Collections.singletonList(role.toString()));
+  AccessPolicyMembershipRequest createAccessPolicy(IamRole role, List<String> emails) {
+    AccessPolicyMembershipRequest membership =
+        new AccessPolicyMembershipRequest().roles(List.of(role.toString()));
     if (emails != null) {
       membership.memberEmails(emails);
     }
@@ -660,7 +682,8 @@ public class SamIam implements IamProviderInterface {
    * @param syncPolicyResponse map with one key that is an email
    * @return the policy group email
    */
-  private String getPolicyGroupEmailFromResponse(Map<String, List<Object>> syncPolicyResponse) {
+  private String getPolicyGroupEmailFromResponse(
+      Map<String, List<SyncReportEntry>> syncPolicyResponse) {
     if (syncPolicyResponse.size() != 1) {
       throw new IllegalArgumentException(
           "Expecting syncPolicyResponse to be an object with one key");
